--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
     background-color: #f6f9fc;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     display: flex;
+     /* display: flex;
      flex-direction: column;
      align-items: center;
-     padding:50px 0px;
+     padding:50px 0px; */
+     padding-top: 80px;
 }
 
 .canvas{
@@ -15,7 +16,9 @@ body {
     background-color: white;
     border-radius: 15px; 
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 .control{
