--- a/mainLayout.css
+++ b/mainLayout.css
@@ -1,3 +1,8 @@
+/* 
+    #2c2c2c
+    #a5ffc9
+    #a5c9ff
+*/
 .container{
     display: flex;
     flex-direction: column;
@@ -6,8 +11,10 @@ header{
     padding-right: 20px;
     padding-left: 20px;
     float: left;
-    font-weight: 800;
+    font-size: 36px;
     align-self: center;
+    width: 80%;
+    margin:0;
 }
 footer{
     border-top:1px solid gray;
@@ -25,7 +32,7 @@ footer{
 .content aside{
     border-left:1px solid gray;    
 }
-nav, aside{
+aside{
     flex-basis: 150px;
     flex-shrink: 0;
 }
@@ -36,15 +43,20 @@ main{
     width:1000px;
     height: 1000px;
 }
+nav{
+    float:right;
+    margin-top: 15px;
+}
 nav ul{
-    display: flex;
-    justify-content: flex-end;
-
+    margin:0;
+    padding:0;
 }
 nav ul li{
-    padding-right: 20px;
-    padding-top:15px; 
     cursor: pointer;
+    float: left;
+
+    display: inline;
+    padding:0 20px 0 20px;
 }
 .fixedHead{
     position: fixed;
@@ -54,6 +66,8 @@ nav ul li{
     height: 50px;
     background-color: #2c2c2c;
     color: honeydew;
+
+    display: flex;
 
 }
 .fixedHead nav{
@@ -67,19 +81,40 @@ nav ul li{
     left: 0;
     top: 50px;
     width: 100%;
-    height: 30px;
-    background-color: lightblue;
+    height: 35px;
+    background-color:#a5c9ff;
 
     justify-content: flex-end;       
 }
-.fixedHead.under form{
-    padding-right: 10px;
-    padding-top: 3px;
-}
+
 a:link, a:visited, a:hover, a:active{
     text-decoration: none;
     color: honeydew;
 }
 .link:hover{
-    font-size: 97%; 
+    font-weight: bold; 
+}
+
+/* login input */
+.fixedHead.under form{
+    padding-right: 10px;
+    padding-top: 3px;
+    
+}
+input[type='text'], input[type='password']{
+    padding: 2px;
+    margin:0;
+    height: 20px;
+    width:150px;
+    outline: none;
+    
+}
+.loginBtn{
+    height: 28px;
+    background-color:#2c2c2c;
+    border: 0;
+    padding: 0 20px;
+    margin:0;
+    color: white;
+    cursor: pointer;
 }
