--- a/talkBoard.css
+++ b/talkBoard.css
@@ -18,7 +18,9 @@
     width: 550px;
 }
 .btnMagin{
-    margin-top: 5px;
+    width: 100%;
+    margin-top: 10px;
+    margin-right: 10%;
 }
 .btnMaginSide{
     margin: 0 2px;
