--- a/mainLayout.css
+++ b/mainLayout.css
@@ -108,8 +108,9 @@ input[type='text'], input[type='password']{
     height: 20px;
     width:150px;
     outline: none;
-    
+    vertical-align: middle;
 }
+
 .loginBtn{
     height: 28px;
     background-color:#2c2c2c;
