add process management, register, login
use pm2 module.
register validation using regex, reduplication using
Ajax.

--- a/public/css/loginRes.css
+++ b/public/css/loginRes.css
@@ -81,3 +81,11 @@ hr{
    
    margin: 10px;
 }
+
+/* 비활성화 */
+.jsIdDup:disabled,
+.jsNickDup:disabled,
+.jsEmailDup:disabled{
+   background: #dddddd;
+   cursor: default;
+ }
