refatoring router,ejs dir

--- a/views/layout/body.ejs
+++ b/views/layout/body.ejs
@@ -6,8 +6,8 @@
         <nav>
             <ul>
                 <li><a href="/about.html" class="link">About</a></li>
-                <li><a href="/board.html" class="link">Board</a></li>
-                <li><a href="/talk.html" class="link">Talk</a></li>
+                <li><a href="/board/imgboard.html" class="link">Board</a></li>
+                <li><a href="/board/listboard.html" class="link">Talk</a></li>
             </ul>
         </nav>  
     </div>
@@ -23,7 +23,7 @@
     
     <section class='content'>
         
-        <main><%- main %></main>
+        <main> <%- include('../template/'+main); %></main>
         <aside><%- aside %></aside>
     </section>
 
