--- a/views/template/boardMain.ejs
+++ b/views/template/boardMain.ejs
@@ -1,15 +1,5 @@
 <div class='boardContainer'>
-    <% imgList.forEach((img) => {%>
-    <div class='boxSize'>
-        <div class="imgLimit">
-            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
-        </div>
-        <div class="widthFull">태그</div>
-        <div class="widthFull">조회수</div>
-    
-        <div class="widthFull">좋아요</div>
-    </div>
-    <% }) %>
+    <!-- list add -->
 </div>
 <div class="boardContainer">
     <div class="btnRight btnMagin">
