--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .control{
-    padding-top: 80px;
+    padding-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,7 +37,7 @@ body {
     cursor: pointer;
     background-color: white;
     padding: 5px 0px;
-    width: 80px;
+    width: 90px;
     text-align: center;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
@@ -51,8 +51,9 @@ body {
 .controls__btns button:active{
     transform: scale(0.98);
 }
-.control .controls__colors{
-    display: flex;
+.controls__colors{
+    height: 0px;
+    margin-left: 50px;
 }
 .controls__colors .controls__color{
     width: 50px;
@@ -60,6 +61,7 @@ body {
     border-radius: 25px;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    margin-top: 8px;
 }
 
 .controls__colors .controls__color:active{
