--- a/views/template/createDrawMain.ejs
+++ b/views/template/createDrawMain.ejs
@@ -1,3 +1,16 @@
+
+<div class="controls__colors" id="jsColors">
+    <div class="controls__color jsColor" style="background-color: #2c2c2c;"></div>
+    <div class="controls__color jsColor" style="background-color: white;"></div>
+    <div class="controls__color jsColor" style="background-color: #FF3B30;"></div>
+    <div class="controls__color jsColor" style="background-color: #FF9500;"></div>
+    <div class="controls__color jsColor" style="background-color: #FFCC00;"></div>
+    <div class="controls__color jsColor" style="background-color: #4CD963;"></div>
+    <div class="controls__color jsColor" style="background-color: #5AC8FA;"></div>
+    <div class="controls__color jsColor" style="background-color: #0579FF;"></div>
+    <div class="controls__color jsColor" style="background-color: #5856D6;"></div>
+</div>
+
 <canvas id="jsCanvas" class="canvas"></canvas>
 
 <div class="control">
@@ -10,18 +23,8 @@
         <button id="jsBrush">Brush</button>
         <button id="jsClear">Clear</button>
         <button id="jsSave">Save</button>
+        <button id="back">&#10004;그리기완료</button>
     </div>
 
-    <div class="controls__colors" id="jsColors">
-        <div class="controls__color jsColor" style="background-color: #2c2c2c;"></div>
-        <div class="controls__color jsColor" style="background-color: white;"></div>
-        <div class="controls__color jsColor" style="background-color: #FF3B30;"></div>
-        <div class="controls__color jsColor" style="background-color: #FF9500;"></div>
-        <div class="controls__color jsColor" style="background-color: #FFCC00;"></div>
-        <div class="controls__color jsColor" style="background-color: #4CD963;"></div>
-        <div class="controls__color jsColor" style="background-color: #5AC8FA;"></div>
-        <div class="controls__color jsColor" style="background-color: #0579FF;"></div>
-        <div class="controls__color jsColor" style="background-color: #5856D6;"></div>
-    </div>
 
 </div>
