refatoring ejs-layout

--- a/views/template/about.ejs
+++ b/views/template/about.ejs
@@ -1,3 +1,4 @@
+<!-- body -->
 <h1>About</h1>
 <div class="fixedboxing">
     <img class="cssImg"src="/img/aboutImg.jpg" alt="">   
@@ -16,3 +17,15 @@
     Well-developed: Every idea discussed in the paragraph should be adequately explained and supported through evidence and details that work together to explain the paragraph’s controlling idea (Rosen and Behrens 119).
 
 </p>
+
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/mainLayout.css">
+<link rel="stylesheet" href="/css/loginRes.css">
+<link rel="stylesheet" href="/css/about.css">
+
+<script src="/js/login.js"></script>
+
+<%- contentFor('title') %>
+share Drawing-about
+<%- contentFor('aside') %>
+aside
