--- a/views/template/iboard.create.ejs
+++ b/views/template/iboard.create.ejs
@@ -1,4 +1,4 @@
-
+<!-- body -->
 <div class="controls__colors" id="jsColors">
     <div class="controls__color jsColor" style="background-color: #2c2c2c;"></div>
     <div class="controls__color jsColor" style="background-color: white;"></div>
@@ -25,6 +25,17 @@
         <button id="jsSave">Save</button>
         <button id="back">&#10004;그리기완료</button>
     </div>
-
-
 </div>
+
+<!--  -->
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/mainLayout.css">
+<link rel="stylesheet" href="/css/loginRes.css">
+
+<script src="/js/canvasDraw.js"></script>
+<script src="/js/login.js"></script>
+
+<%- contentFor('title') %>
+share Drawing-createDraw
+<%- contentFor('aside') %>
+aside
