--- a/views/template/talkboard.ejs
+++ b/views/template/talkboard.ejs
@@ -1,3 +1,4 @@
+<!-- body -->
 <div class='boardContainer'>
     <!-- list add -->
 </div>
@@ -15,3 +16,15 @@
     </div>
 
 </div>
+
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/mainLayout.css">
+<link rel="stylesheet" href="/css/loginRes.css">
+<link rel="stylesheet" href="/css/talkBoard.css">
+
+<script src="/js/login.js"></script>
+
+<%- contentFor('title') %>
+share Drawing-talkBoard
+<%- contentFor('aside') %>
+aside
