add write board frontend

--- a/views/iboard/iboard.view.ejs
+++ b/views/iboard/iboard.view.ejs
@@ -1,16 +1,18 @@
 <!-- body -->
 <div>
-    <%-   user_id %>
+    <%-   title %>
 </div>
 <div>
-    <span><%- title %></span>
     <span><%- user_id %></span>
     <span><%- hit %></span>
+    <span><%- date %></span>
 </div>
-<div> <%- date %>
+
+<img src="/img/<%- imgpath %>" alt="">
+<div>
+    <%- context %>
 </div>
-<div> <%- context %>
-</div>
+
 <div>댓글</div>
 
 <link rel="stylesheet" href="/css/style.css">
