--- a/views/iboard/iboard.update.ejs
+++ b/views/iboard/iboard.update.ejs
@@ -1,3 +1,68 @@
-<div>
-    iboard.update.ejs 
+<!-- body -->
+<img class='loadedImg' src="<%- imgpath %>" alt="" style="display: none;" />
+
+<div style="overflow:auto;">
+    <div class='tab-control'>
+        <button id='btn-prev'>
+            Prev
+        </button>
+        <button id="btn-next">
+            Next
+        </button>
+    </div>
 </div>
+
+<div class='tab'>
+    <div class="controls__colors" id="jsColors">
+        <div class="controls__color jsColor" style="background-color: #2c2c2c;"></div>
+        <div class="controls__color jsColor" style="background-color: white;"></div>
+        <div class="controls__color jsColor" style="background-color: #FF3B30;"></div>
+        <div class="controls__color jsColor" style="background-color: #FF9500;"></div>
+        <div class="controls__color jsColor" style="background-color: #FFCC00;"></div>
+        <div class="controls__color jsColor" style="background-color: #4CD963;"></div>
+        <div class="controls__color jsColor" style="background-color: #5AC8FA;"></div>
+        <div class="controls__color jsColor" style="background-color: #0579FF;"></div>
+        <div class="controls__color jsColor" style="background-color: #5856D6;"></div>
+    </div>
+    
+    <canvas id="jsCanvas" class="canvas" ></canvas>
+    
+    <div class="control">
+        <div class="controls__range">
+            <input type="range" name="" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1"/>
+        </div>
+        <div class="controls__btns">
+            <button id="jsFill">Fill</button>
+            <button id="jsPaint">Paint</button>
+            <button id="jsBrush">Brush</button>
+            <button id="jsClear">Clear</button>
+            <button id="jsSave">Save</button>
+            
+        </div>
+    </div>
+</div>
+
+<div class='tab size-box'>
+    <form id='writeForm' action="/api/imgboard" method="PUT">
+        <input name="id" style="display: none" value="<%- id %>"></span>
+        <label for="title2">제목</label>
+        <input name="title" type="text" id="title2" placeholder="title..." value="<%- title %>">
+        <label for="subject2">내용</label>
+        <textarea name="content" id="subject2" style="height: 200px;" placeholder="Content..."><%- context %></textarea>
+    </form>
+</div>
+
+<!--  -->
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/mainLayout.css">
+<link rel="stylesheet" href="/css/loginRes.css">
+<link rel="stylesheet" href="/css/arrowBtn.css">
+
+<script src="/js/canvasDraw.js"></script>
+<script src="/js/login.js"></script>
+<script src="/js/arrowBtn_update.js"></script>
+<script src="/js/iboardLoadImg.js"></script>
+<%- contentFor('title') %>
+share Drawing-createDraw
+<%- contentFor('aside') %>
+aside
