--- a/views/iboard/iboard.view.ejs
+++ b/views/iboard/iboard.view.ejs
@@ -8,11 +8,13 @@
     <span><%- date %></span>
 </div>
 
-<img src="/img/<%- imgpath %>" alt="">
+<img src="<%- imgpath %>" alt="">
 <div>
     <%- context %>
 </div>
 
+<button><a href="/board/imgboard/<%- id %>/update" style="color: black;">update</a></button>
+<button class='delBtn'>delete</button>
 <div>댓글</div>
 
 <link rel="stylesheet" href="/css/style.css">
@@ -23,7 +25,7 @@
 
 
 <script src="/js/login.js"></script>
-
+<script src="/js/deleteProcess.js"></script>
 <%- contentFor('title') %>
 share Drawing-Board
 <%- contentFor('aside') %>
